--- a/HandEase/Exercises/Storyboard/Exercises.storyboard
+++ b/HandEase/Exercises/Storyboard/Exercises.storyboard
@@ -177,14 +177,50 @@
                                             <action selector="toggleMenu:" destination="Ugh-U9-R5K" eventType="touchUpInside" id="c9L-51-iSP"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="acM-0e-gwZ">
+                                        <rect key="frame" x="327" y="18" width="32" height="32"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="acM-0e-gwZ" secondAttribute="height" multiplier="1:1" id="OGm-Vm-8dU"/>
+                                        </constraints>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="heart-unsaved"/>
+                                        <connections>
+                                            <action selector="favourite:" destination="SOb-d0-dSr" eventType="touchUpInside" id="0y1-xT-DM3"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hzW-tq-tFs">
+                                        <rect key="frame" x="244" y="18" width="50" height="32"/>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="19"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Notes"/>
+                                        <connections>
+                                            <action selector="viewNotes:" destination="SOb-d0-dSr" eventType="touchUpInside" id="4xE-Uf-Iqi"/>
+                                        </connections>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XH3-D6-UYa">
+                                        <rect key="frame" x="310" y="10" width="1" height="46"/>
+                                        <color key="backgroundColor" red="0.67865103950356387" green="0.76245349534376694" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="1" id="t1L-oQ-cGC"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" red="0.14117647059999999" green="0.36862745099999999" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="XH3-D6-UYa" firstAttribute="leading" secondItem="hzW-tq-tFs" secondAttribute="trailing" constant="16" id="3t3-Gn-qkq"/>
                                     <constraint firstItem="Mhb-oH-4BZ" firstAttribute="leading" secondItem="cBv-or-WsZ" secondAttribute="leading" constant="16" id="3u2-Al-Xak"/>
+                                    <constraint firstAttribute="bottom" secondItem="hzW-tq-tFs" secondAttribute="bottom" constant="14" id="7mR-cw-LlS"/>
+                                    <constraint firstItem="XH3-D6-UYa" firstAttribute="top" secondItem="cBv-or-WsZ" secondAttribute="top" constant="10" id="Dyx-FB-GDj"/>
+                                    <constraint firstItem="acM-0e-gwZ" firstAttribute="leading" secondItem="XH3-D6-UYa" secondAttribute="trailing" constant="16" id="HSf-pJ-P6S"/>
+                                    <constraint firstAttribute="trailing" secondItem="acM-0e-gwZ" secondAttribute="trailing" constant="16" id="J0t-aB-pX3"/>
                                     <constraint firstAttribute="height" constant="64" id="YdV-Qq-SLw"/>
+                                    <constraint firstAttribute="bottom" secondItem="XH3-D6-UYa" secondAttribute="bottom" constant="8" id="bIe-Jw-LZ6"/>
                                     <constraint firstAttribute="bottom" secondItem="Mhb-oH-4BZ" secondAttribute="bottom" constant="8" id="p4y-gX-oRT"/>
                                     <constraint firstItem="Mhb-oH-4BZ" firstAttribute="top" secondItem="cBv-or-WsZ" secondAttribute="top" constant="12" id="txV-ax-BLB"/>
+                                    <constraint firstItem="acM-0e-gwZ" firstAttribute="top" secondItem="cBv-or-WsZ" secondAttribute="top" constant="18" id="vw8-bR-snc"/>
+                                    <constraint firstAttribute="bottom" secondItem="acM-0e-gwZ" secondAttribute="bottom" constant="14" id="yym-T4-RQ7"/>
+                                    <constraint firstItem="hzW-tq-tFs" firstAttribute="top" secondItem="cBv-or-WsZ" secondAttribute="top" constant="18" id="zpt-2d-a0g"/>
                                 </constraints>
                             </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9GU-yq-bnx">
@@ -283,7 +319,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aH5-2I-Xny" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1665" y="108"/>
+            <point key="canvasLocation" x="1664.8" y="107.49625187406298"/>
         </scene>
         <!--Exercise Video View Controller-->
         <scene sceneID="fXp-wO-txX">
@@ -361,5 +397,6 @@
     </scenes>
     <resources>
         <image name="btn-play" width="1024" height="1024"/>
+        <image name="heart-unsaved" width="1600" height="1600"/>
     </resources>
 </document>
