--- a/HandEase/Exercises/Views/SmallExerciseCell.xib
+++ b/HandEase/Exercises/Views/SmallExerciseCell.xib
@@ -27,7 +27,7 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xNl-3S-aah">
                                 <rect key="frame" x="8" y="7" width="131.5" height="85"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wwu-oR-X0l">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wwu-oR-X0l">
                                 <rect key="frame" x="318" y="26.5" width="45" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="wwu-oR-X0l" secondAttribute="height" multiplier="1:1" id="7Y6-OW-rh4"/>
