--- a/HandEase/Menu/Storyboards/Menu.storyboard
+++ b/HandEase/Menu/Storyboards/Menu.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -35,7 +36,7 @@
                             <constraint firstItem="mgZ-d2-5ky" firstAttribute="bottom" secondItem="8Cd-rC-j7G" secondAttribute="bottom" id="GS8-0V-LCY"/>
                             <constraint firstItem="8Cd-rC-j7G" firstAttribute="trailing" secondItem="mgZ-d2-5ky" secondAttribute="trailing" id="U0y-I6-l3e"/>
                             <constraint firstItem="8Cd-rC-j7G" firstAttribute="leading" secondItem="mgZ-d2-5ky" secondAttribute="leading" id="o4u-uw-92f"/>
-                            <constraint firstItem="8Cd-rC-j7G" firstAttribute="top" secondItem="Oqu-98-vcz" secondAttribute="top" constant="20" id="wiV-Fg-NmC"/>
+                            <constraint firstItem="8Cd-rC-j7G" firstAttribute="top" secondItem="Oqu-98-vcz" secondAttribute="topMargin" id="wiV-Fg-NmC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="mgZ-d2-5ky"/>
                     </view>
