Added 'Progress' view to the app and hooked up functionality.

--- a/HandEase/Exercises/Storyboard/Exercises.storyboard
+++ b/HandEase/Exercises/Storyboard/Exercises.storyboard
@@ -187,7 +187,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="acM-0e-gwZ">
-                                        <rect key="frame" x="324" y="18" width="35" height="35"/>
+                                        <rect key="frame" x="265" y="18" width="35" height="35"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="acM-0e-gwZ" secondAttribute="height" multiplier="1:1" id="OGm-Vm-8dU"/>
                                             <constraint firstAttribute="height" constant="35" id="ojB-gv-g5t"/>
@@ -199,7 +199,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hzW-tq-tFs">
-                                        <rect key="frame" x="241" y="18" width="50" height="35"/>
+                                        <rect key="frame" x="182" y="18" width="50" height="35"/>
                                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="19"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Notes"/>
@@ -208,23 +208,38 @@
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XH3-D6-UYa">
-                                        <rect key="frame" x="307" y="18" width="1" height="35"/>
+                                        <rect key="frame" x="248" y="18" width="1" height="35"/>
                                         <color key="backgroundColor" red="0.67865103950356387" green="0.76245349534376694" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="1" id="t1L-oQ-cGC"/>
                                         </constraints>
                                     </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E49-Js-FI7">
+                                        <rect key="frame" x="316" y="18" width="35" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="E49-Js-FI7" secondAttribute="height" multiplier="1:1" id="F8J-eN-LkW"/>
+                                            <constraint firstAttribute="height" constant="35" id="b4V-kr-Hxz"/>
+                                        </constraints>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="tick"/>
+                                        <connections>
+                                            <action selector="completeExercise:" destination="SOb-d0-dSr" eventType="touchUpInside" id="4jC-IB-LUf"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.14117647059999999" green="0.36862745099999999" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="XH3-D6-UYa" firstAttribute="leading" secondItem="hzW-tq-tFs" secondAttribute="trailing" constant="16" id="3t3-Gn-qkq"/>
                                     <constraint firstItem="Mhb-oH-4BZ" firstAttribute="leading" secondItem="cBv-or-WsZ" secondAttribute="leading" constant="16" id="3u2-Al-Xak"/>
+                                    <constraint firstItem="E49-Js-FI7" firstAttribute="top" secondItem="cBv-or-WsZ" secondAttribute="topMargin" constant="-10" id="5j0-Fa-nzc"/>
                                     <constraint firstAttribute="bottom" secondItem="hzW-tq-tFs" secondAttribute="bottom" constant="11" id="7mR-cw-LlS"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="E49-Js-FI7" secondAttribute="trailing" constant="16" id="AFM-yb-vSn"/>
                                     <constraint firstItem="XH3-D6-UYa" firstAttribute="top" secondItem="cBv-or-WsZ" secondAttribute="topMargin" constant="-10" id="Dyx-FB-GDj"/>
                                     <constraint firstItem="acM-0e-gwZ" firstAttribute="leading" secondItem="XH3-D6-UYa" secondAttribute="trailing" constant="16" id="HSf-pJ-P6S"/>
-                                    <constraint firstAttribute="trailing" secondItem="acM-0e-gwZ" secondAttribute="trailing" constant="16" id="J0t-aB-pX3"/>
+                                    <constraint firstAttribute="bottom" secondItem="E49-Js-FI7" secondAttribute="bottom" constant="11" id="VIa-qY-o4r"/>
                                     <constraint firstAttribute="bottom" secondItem="XH3-D6-UYa" secondAttribute="bottom" constant="11" id="bIe-Jw-LZ6"/>
+                                    <constraint firstItem="E49-Js-FI7" firstAttribute="leading" secondItem="acM-0e-gwZ" secondAttribute="trailing" constant="16" id="lzp-hn-d26"/>
                                     <constraint firstAttribute="bottom" secondItem="Mhb-oH-4BZ" secondAttribute="bottom" constant="11" id="p4y-gX-oRT"/>
                                     <constraint firstItem="Mhb-oH-4BZ" firstAttribute="top" secondItem="cBv-or-WsZ" secondAttribute="topMargin" constant="-10" id="txV-ax-BLB"/>
                                     <constraint firstItem="acM-0e-gwZ" firstAttribute="top" secondItem="cBv-or-WsZ" secondAttribute="topMargin" constant="-10" id="vw8-bR-snc"/>
@@ -407,5 +422,6 @@
     <resources>
         <image name="btn-play" width="1024" height="1024"/>
         <image name="heart-unsaved" width="1600" height="1600"/>
+        <image name="tick" width="512" height="512"/>
     </resources>
 </document>
