--- a/HandEase/Exercises/Storyboard/Exercises.storyboard
+++ b/HandEase/Exercises/Storyboard/Exercises.storyboard
@@ -12,10 +12,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Exercise List View Controller-->
+        <!--Container Navigation Bar View Controller-->
         <scene sceneID="EZ4-SB-aWO">
             <objects>
-                <viewController storyboardIdentifier="myExercises" automaticallyAdjustsScrollViewInsets="NO" id="9Az-Wl-NZR" customClass="ExerciseListViewController" customModule="HandEase" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="nav" automaticallyAdjustsScrollViewInsets="NO" id="9Az-Wl-NZR" customClass="ContainerNavigationBarViewController" customModule="HandEase" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fTA-of-WpG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -30,7 +30,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
-                                            <action selector="toggleMenu:" destination="9Az-Wl-NZR" eventType="touchUpInside" id="o2T-GZ-ZHq"/>
+                                            <action selector="openMenu:" destination="9Az-Wl-NZR" eventType="touchUpInside" id="qiT-rm-P7a"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Exercises" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="85a-ow-5m4">
@@ -51,16 +51,49 @@
                                     <constraint firstItem="6LG-Cp-4l5" firstAttribute="top" secondItem="sSq-jL-3aR" secondAttribute="topMargin" constant="-10" id="gL1-GV-pjo"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You have no saved exercises. Tap a heart from the All Exercises page." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jQA-k9-pEX">
-                                <rect key="frame" x="32" y="96" width="311" height="41"/>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mz9-7B-hC8">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </containerView>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="sSq-jL-3aR" firstAttribute="leading" secondItem="fTA-of-WpG" secondAttribute="leading" id="9eQ-rm-3Sy"/>
+                            <constraint firstItem="Mz9-7B-hC8" firstAttribute="leading" secondItem="Nam-BK-asb" secondAttribute="leading" id="WRu-q6-PEe"/>
+                            <constraint firstItem="Nam-BK-asb" firstAttribute="trailing" secondItem="Mz9-7B-hC8" secondAttribute="trailing" id="Whg-tm-Bmb"/>
+                            <constraint firstItem="Mz9-7B-hC8" firstAttribute="top" secondItem="sSq-jL-3aR" secondAttribute="bottom" id="hmo-g0-dxB"/>
+                            <constraint firstItem="Nam-BK-asb" firstAttribute="bottom" secondItem="Mz9-7B-hC8" secondAttribute="bottom" id="tJZ-86-7ta"/>
+                            <constraint firstAttribute="trailing" secondItem="sSq-jL-3aR" secondAttribute="trailing" id="u7c-g0-wGD"/>
+                            <constraint firstItem="sSq-jL-3aR" firstAttribute="top" secondItem="fTA-of-WpG" secondAttribute="top" id="wKq-QH-ZQL"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Nam-BK-asb"/>
+                    </view>
+                    <connections>
+                        <outlet property="container" destination="Mz9-7B-hC8" id="bb6-oa-uay"/>
+                        <outlet property="navigationTitle" destination="85a-ow-5m4" id="6mH-ug-CVg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F90-mM-sfR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="441" y="107"/>
+        </scene>
+        <!--Exercise List View Controller-->
+        <scene sceneID="o5z-6S-pqq">
+            <objects>
+                <viewController storyboardIdentifier="myExercises" id="sX6-5Q-VKr" customClass="ExerciseListViewController" customModule="HandEase" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0YU-F6-bjj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You have no saved exercises. Tap a heart from the All Exercises page." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nXB-Fj-0dD">
+                                <rect key="frame" x="32" y="52" width="311" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" prefetchingEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xud-V4-Izx">
-                                <rect key="frame" x="6" y="70" width="363" height="591"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" prefetchingEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oTp-Bk-OEM">
+                                <rect key="frame" x="6" y="26" width="363" height="635"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="6" minimumInteritemSpacing="8" id="RhD-XA-ZCR">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="6" minimumInteritemSpacing="8" id="rm8-fl-swN">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -71,27 +104,23 @@
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="sSq-jL-3aR" firstAttribute="leading" secondItem="fTA-of-WpG" secondAttribute="leading" id="9eQ-rm-3Sy"/>
-                            <constraint firstItem="xud-V4-Izx" firstAttribute="top" secondItem="sSq-jL-3aR" secondAttribute="bottom" constant="6" id="Cvk-wx-Jgd"/>
-                            <constraint firstAttribute="bottom" secondItem="xud-V4-Izx" secondAttribute="bottom" constant="6" id="EvG-qh-LK9"/>
-                            <constraint firstItem="jQA-k9-pEX" firstAttribute="top" secondItem="sSq-jL-3aR" secondAttribute="bottom" constant="32" id="FFd-Ms-fQR"/>
-                            <constraint firstItem="xud-V4-Izx" firstAttribute="trailing" secondItem="Nam-BK-asb" secondAttribute="trailing" constant="-6" id="RkQ-0c-aZ6"/>
-                            <constraint firstItem="xud-V4-Izx" firstAttribute="leading" secondItem="Nam-BK-asb" secondAttribute="leading" constant="6" id="TaR-g5-HT0"/>
-                            <constraint firstAttribute="trailing" secondItem="jQA-k9-pEX" secondAttribute="trailing" constant="32" id="Ure-Ae-D5M"/>
-                            <constraint firstItem="jQA-k9-pEX" firstAttribute="leading" secondItem="fTA-of-WpG" secondAttribute="leading" constant="32" id="WsR-fc-Acd"/>
-                            <constraint firstAttribute="trailing" secondItem="sSq-jL-3aR" secondAttribute="trailing" id="u7c-g0-wGD"/>
-                            <constraint firstItem="jQA-k9-pEX" firstAttribute="centerX" secondItem="fTA-of-WpG" secondAttribute="centerX" id="vBH-hh-i5U"/>
-                            <constraint firstItem="sSq-jL-3aR" firstAttribute="top" secondItem="fTA-of-WpG" secondAttribute="top" id="wKq-QH-ZQL"/>
+                            <constraint firstItem="oTp-Bk-OEM" firstAttribute="leading" secondItem="lWU-wM-blc" secondAttribute="leading" constant="6" id="5EG-w7-WaZ"/>
+                            <constraint firstItem="lWU-wM-blc" firstAttribute="bottom" secondItem="oTp-Bk-OEM" secondAttribute="bottom" constant="6" id="McG-wT-RG4"/>
+                            <constraint firstItem="nXB-Fj-0dD" firstAttribute="leading" secondItem="lWU-wM-blc" secondAttribute="leading" constant="32" id="Mni-Bd-x2h"/>
+                            <constraint firstItem="nXB-Fj-0dD" firstAttribute="top" secondItem="lWU-wM-blc" secondAttribute="top" constant="32" id="Vga-Lf-FyH"/>
+                            <constraint firstItem="lWU-wM-blc" firstAttribute="trailing" secondItem="nXB-Fj-0dD" secondAttribute="trailing" constant="32" id="o2w-pi-rFJ"/>
+                            <constraint firstItem="oTp-Bk-OEM" firstAttribute="trailing" secondItem="lWU-wM-blc" secondAttribute="trailing" constant="-6" id="pMu-e8-zdV"/>
+                            <constraint firstItem="oTp-Bk-OEM" firstAttribute="top" secondItem="lWU-wM-blc" secondAttribute="top" constant="6" id="t1b-TR-0jl"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Nam-BK-asb"/>
+                        <viewLayoutGuide key="safeArea" id="lWU-wM-blc"/>
                     </view>
                     <connections>
-                        <outlet property="collectionView" destination="xud-V4-Izx" id="eR0-w0-WH2"/>
+                        <outlet property="collectionView" destination="oTp-Bk-OEM" id="1O3-yk-MDa"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="F90-mM-sfR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7lJ-Ls-BIl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="98" y="110"/>
+            <point key="canvasLocation" x="97" y="802"/>
         </scene>
         <!--Exercise List View Controller-->
         <scene sceneID="ifV-Zd-ULo">
@@ -101,39 +130,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FtZ-UH-lOq">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OxQ-5G-oYA">
-                                        <rect key="frame" x="16" y="18" width="50" height="35"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
-                                        <state key="normal" title="Menu">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="toggleMenu:" destination="Ugh-U9-R5K" eventType="touchUpInside" id="XQC-A2-u3t"/>
-                                        </connections>
-                                    </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="All Exercises" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xaz-xd-Z2V">
-                                        <rect key="frame" x="131.5" y="18" width="112" height="35"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" red="0.14117647058823529" green="0.36862745098039218" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="OxQ-5G-oYA" secondAttribute="bottom" constant="11" id="BpK-F4-Gze"/>
-                                    <constraint firstItem="xaz-xd-Z2V" firstAttribute="top" secondItem="FtZ-UH-lOq" secondAttribute="topMargin" constant="-10" id="Bq6-Jd-F0B"/>
-                                    <constraint firstItem="xaz-xd-Z2V" firstAttribute="centerX" secondItem="FtZ-UH-lOq" secondAttribute="centerX" id="Bw1-8l-zL9"/>
-                                    <constraint firstItem="OxQ-5G-oYA" firstAttribute="top" secondItem="FtZ-UH-lOq" secondAttribute="topMargin" constant="-10" id="CJh-sl-fIZ"/>
-                                    <constraint firstAttribute="bottom" secondItem="xaz-xd-Z2V" secondAttribute="bottom" constant="11" id="fem-km-rg1"/>
-                                    <constraint firstItem="OxQ-5G-oYA" firstAttribute="leading" secondItem="FtZ-UH-lOq" secondAttribute="leading" constant="16" id="h5L-b8-9Gb"/>
-                                </constraints>
-                            </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" prefetchingEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BSE-DV-lyj">
-                                <rect key="frame" x="6" y="70" width="363" height="591"/>
+                                <rect key="frame" x="6" y="26" width="363" height="635"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="6" minimumInteritemSpacing="8" id="b0y-5o-NC4">
                                     <size key="itemSize" width="50" height="50"/>
@@ -146,13 +144,10 @@
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="BSE-DV-lyj" firstAttribute="top" secondItem="FtZ-UH-lOq" secondAttribute="bottom" constant="6" id="Bha-5b-yMs"/>
                             <constraint firstItem="BSE-DV-lyj" firstAttribute="leading" secondItem="RsQ-fk-kSP" secondAttribute="leading" constant="6" id="IMZ-Ih-L8B"/>
                             <constraint firstItem="RsQ-fk-kSP" firstAttribute="bottom" secondItem="BSE-DV-lyj" secondAttribute="bottom" constant="6" id="VNv-0I-rzp"/>
-                            <constraint firstItem="FtZ-UH-lOq" firstAttribute="top" secondItem="HEX-ht-RMC" secondAttribute="top" id="YDw-5x-AKO"/>
                             <constraint firstItem="BSE-DV-lyj" firstAttribute="trailing" secondItem="RsQ-fk-kSP" secondAttribute="trailing" constant="-6" id="gam-0D-EXY"/>
-                            <constraint firstItem="FtZ-UH-lOq" firstAttribute="leading" secondItem="HEX-ht-RMC" secondAttribute="leading" id="r99-Ab-mH2"/>
-                            <constraint firstAttribute="trailing" secondItem="FtZ-UH-lOq" secondAttribute="trailing" id="xNE-Cy-rbx"/>
+                            <constraint firstItem="BSE-DV-lyj" firstAttribute="top" secondItem="RsQ-fk-kSP" secondAttribute="top" constant="6" id="gkk-f0-ed6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="RsQ-fk-kSP"/>
                     </view>
@@ -162,7 +157,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ROD-nu-JXs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="816.79999999999995" y="108.39580209895054"/>
+            <point key="canvasLocation" x="801" y="802"/>
         </scene>
         <!--Exercise View Controller-->
         <scene sceneID="ULS-Sy-Izk">
@@ -416,7 +411,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SmC-R2-uis" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2420" y="109"/>
+            <point key="canvasLocation" x="1665" y="802"/>
         </scene>
     </scenes>
     <resources>
